samples/_failures_safe/1761789669_56bc28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86f8b32f.c: In function ‘main’:
./samples/SAFE/__tmp_86f8b32f.c:150:9: error: expected expression at end of input
  150 |         memcmp(input_buf.data,
      |         ^~~~~~
./samples/SAFE/__tmp_86f8b32f.c:150:9: error: too few arguments to function ‘memcmp’
In file included from ./samples/SAFE/__tmp_86f8b32f.c:4:
/usr/include/string.h:64:12: note: declared here
   64 | extern int memcmp (const void *__s1, const void *__s2, size_t __n)
      |            ^~~~~~
./samples/SAFE/__tmp_86f8b32f.c:150:9: error: expected declaration or statement at end of input
  150 |         memcmp(input_buf.data,
      |         ^~~~~~
